--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "8.23.0",
+    "eslint-config-airbnb-typescript": "file:typescript-eslint/eslint-plugin@5.13.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.8.2"
   }
